option('PMHB_LATENCY', type : 'boolean', value : true)
option('LOAD_FACTOR', type : 'boolean', value : false)
option('COUNTING_WRITE', type : 'boolean', value : false)
option('INSERT_DEBUG', type : 'boolean', value : false)
option('PREFAULT', type : 'boolean', value : true)
option('BREAKDOWN_SOD', type : 'boolean', value : false)
option('BREAKDOWN_SO', type : 'boolean', value : false)
option('BREAKDOWN_S', type : 'boolean', value : false)
option('BREAKDOWN_BASE', type : 'boolean', value : false)
